style.css
/*preliminaries*/
:root {
    --corner-radius: 15px; 
}

html {
    font-family: Verdana, sans-serif;
}

button, input {
    box-sizing: border-box;
    border: none;
}

* {
    margin: 0;
    padding: 0;
}
/*...*/

/*Main table container stuff*/
main {
    display: flex;
    flex-direction: column;
    gap: 2em;
    width: 50%;
    margin: 10vh auto;
}

main h1 {
    margin-bottom: 1em;
    display: flex;
    align-items: center;
    gap: 1em;
}

main h1 svg {
    width: 1.5em;
}

main .book-tracker {
    background-color: gainsboro;
    min-width: 2em;
    text-align: center;
    display: inline-block;
}

main button#book-adder {
    box-sizing: content-box;
    width: 1em;
    height: 1em;
    padding: 5px;
    font-size: 2em;
    border-radius: 50%;

    align-self: flex-end;

    /*Aligns text content to the center*/
    display: grid;
    justify-content: center;
    align-content: center;
    /*...*/
}

table {
    border-spacing: 0;
    border-collapse: separate;
    border: 2px solid hsl(0, 2%, 88%); 
    background-color: hsl(0, 2%, 88%); /*Prevents white space/gaps between the top corners and that header background */
    border-radius: var(--corner-radius);
    display: none; 
}

col.read-col {
    width: 15%;
}

col.pages-col {
    width: 20%;
}

thead {
    text-align: left;
    letter-spacing: 1px;
}

thead tr th{
    background-color: hsl(0, 2%, 88%);
}

table thead th:first-child {
   border-top-left-radius: var(--corner-radius); 
}

table thead th:last-child {
    border-top-right-radius: var(--corner-radius);
}

table tr:last-child td:first-child {
    border-bottom-left-radius: var(--corner-radius);
}
    
table tr:last-child td:last-child {
    border-bottom-right-radius: var(--corner-radius);
}

tbody tr {
    position: relative;
}
    tbody tr:nth-child(even) td{
        background-color: hsl(0, 0%, 99%);
    }

    tbody tr:nth-child(odd) td{ /*Background color not applied to row because that causes bleed through the border radiai*/
        background-color: hsl(0, 0%, 96%);
    }

tr td:not(:first-child) {
    border-left: 2px solid hsl(0, 2%, 88%);
}

tbody tr:hover td {
    background-color: hsl(199, 53%, 94%);
}
    tbody tr:hover td:not(:first-child){
        border-left: 2px solid hsl(201, 59%, 89%);
    }

td, th {
    padding: 0.6em 1em;
}

th {
    padding-top: 1.4em;
}

tbody tr td:first-of-type .remove {
    --size: 1em;
    width: var(--size);
    height: var(--size);
    background-color:rgb(255, 213, 121);

    position: absolute;
    left: calc(var(--size)/-1.5);
    
    /*Aligns text content to the center*/
    display: none; /*changes to grid in javascript*/
    justify-content: center;
    align-content: center;
    /*...*/
}
    tbody tr td:first-of-type .remove:hover {
        background-color:rgb(228, 201, 142);
    }

    tbody tr td:first-of-type .remove:active {
        background-color:rgb(185, 162, 111);
    }

tbody tr td:last-of-type .read-check {
    margin-left: 5%;
    opacity: 0;
}
/*...*/

/* Form things */ 
.form-container {
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.158);
    position: absolute;
    top: 0;
    right: 0;

    display: none;
    justify-content: center;
    align-items: center;

}
form {
    display: grid;
    grid-template-columns: 1fr 1fr; 
    width: 20%;
    gap: 1em;
    padding: 20px;
    background-color: white;
    border-radius: var(--corner-radius);

    position: relative;
}

form div:nth-of-type(1), form div:nth-of-type(2){
    grid-column: 1 / -1;
}

form input[type='text']{
    border: 1px solid black;
    width: 100%;
    padding: 3px 6px;
    border-radius: 6px;
    display: block;
}

form input[type='number']{
    border: 1px solid black;
    width: 5em;
    border-radius: 6px;
    padding: 3px 6px;
}

form button[type='submit']{
    grid-column: 1 / -1;
    padding: 0.5em;
    border-radius: 6px;
}

form button#exit{
    width: 1.5em;
    height: 1.5em;

    background-color: rgb(216, 71, 100);
    border-radius: 50%;
    color:white;

    position: absolute;
    top: -10px;
    right: -10px; 
    /*Aligns text content to the center*/
    display: grid;
    justify-content: center;
    align-content: center;
    /*...*/
}
    form button#exit:hover{
        background-color: rgb(189, 39, 69);
    }

    form button#exit:active{
        background-color: rgb(165, 32, 59);
    }

